# flight-tracker

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_PLAN.md  README.md  hacs.json  pyproject.toml  requirements.txt
.github/workflows/: release.yml  validate.yml
custom_components/flight_tracker/: __init__.py  config_flow.py  const.py  coordinator.py  device_tracker.py  entity_manager.py  manifest.json  models.py  sensor.py  services.py
custom_components/flight_tracker/api/: __init__.py  adsb_fi.py  adsb_lol.py  planespotters.py
custom_components/flight_tracker/translations/: en.json
tests/: conftest.py  test_api.py
