[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flight-tracker"
version = "1.0.5"
description = "Home Assistant custom integration for live flight tracking with ADSB.fi, ADSB.lol, ADSB.com and Planespotters"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Peter Jurgens", email = "peter@example.com"}
]
keywords = [
    "home-assistant",
    "custom-component",
    "flight-tracker",
    "adsb",
    "planespotters",
    "hacs"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.12",
    "ruff>=0.1",
    "mypy>=1.7",
    "homeassistant>=2024.1",
]

[project.urls]
Homepage = "https://github.com/peterjurgens/flight-tracker"
Repository = "https://github.com/peterjurgens/flight-tracker"
Issues = "https://github.com/peterjurgens/flight-tracker/issues"
Documentation = "https://github.com/peterjurgens/flight-tracker/blob/main/README.md"
Changelog = "https://github.com/peterjurgens/flight-tracker/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["custom_components/flight_tracker"]

[tool.ruff]
line-length = 120
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "S101",  # assert statements in tests
    "TRY003", # Avoid specifying long messages outside the exception class
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "dist",
    "build",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "homeassistant.*",
    "aiohttp.*",
    "aiofiles.*",
    "voluptuous.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hatch.envs.default]
dependencies = [
    "homeassistant>=2024.1",
]

[tool.hatch.envs.dev]
dependencies = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.12",
    "ruff>=0.1",
    "mypy>=1.7",
]